wifi: Configure correct overlay configuration.
ag/16564596 will change default value to false.
Configure correct overlay configuration.

Bug: 212488775
Test: manual test & build
Change-Id: Iaf1a0a23dae69fde5995e591a757a8ef5374d5b5

--- a/rro_overlays/WifiOverlay/res/values/config.xml
+++ b/rro_overlays/WifiOverlay/res/values/config.xml
@@ -48,4 +48,7 @@
     <!-- Indicate the device support request channel on Wi-Fi Aware data-path. -->
     <bool translatable="false" name="config_wifiSupportChannelOnDataPath">true</bool>
 
+    <!-- Indicate the driver support NL80211_REG_CHANGED event. -->
+    <bool translatable="false" name="config_wifiDriverSupportedNl80211RegChangedEvent">true</bool>
+
 </resources>
