wifi: Enable set channel on NDP setup
Bug: 190354626
Test: build, CtsVerifier
Change-Id: Ieff18b96ec0f24c1c20c40add4e47a532ece8922

--- a/rro_overlays/WifiOverlay/res/values/config.xml
+++ b/rro_overlays/WifiOverlay/res/values/config.xml
@@ -45,4 +45,7 @@
     <!-- Enable WPA2 to WPA3 auto-upgrade -->
     <bool translatable="false" name="config_wifiSaeUpgradeEnabled">false</bool>
 
+    <!-- Indicate the device support request channel on Wi-Fi Aware data-path. -->
+    <bool translatable="false" name="config_wifiSupportChannelOnDataPath">true</bool>
+
 </resources>
