rosy: migrate rounded corner size to A13
Signed-off-by: NFS86 <jarbull86@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/dimens.xml
+++ b/overlay/frameworks/base/core/res/res/values/dimens.xml
@@ -19,7 +19,7 @@
 
 <resources>
     <!-- Default radius of the software rounded corners. -->
-    <dimen name="rounded_corner_radius">30px</dimen>
+    <dimen name="rounded_corner_radius">13dp</dimen>
 
     <!-- The default height of the status bar used in {@link SystemBarUtils#getStatusBarHeight} to
          calculate the status bar height. -->
